[package]
name = "cameleon-gui"
version = "0.1.0"
authors = ["Cameleon Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cameleon"
path = "src/main.rs"

[dependencies]
iced = { version = "0.3.0", features = ["image", "smol"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
opencv = { version = "0.53.0", optional = true }
cameleon = {path="../cameleon/cameleon", features=["libusb"]}
cameleon-genapi = {path="../cameleon/genapi"}
image = "0.23.14"
thiserror = "1.0.25"
derive_more = "0.99.14"
libc = { version = "0.2.95", optional = true }
iced_futures = "0.3.0"
futures = "0.3.15"

[features]
cv = ["opencv", "libc"]
default = []
